added navbar and bootstrap

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -13,3 +13,11 @@
  *= require_tree .
  *= require_self
  */
+
+ body{
+   background-image: url(<%= asset_path "cheers.jpeg" %>);
+   background-size: cover;
+ }
+.container{
+  background: rgba(255, 255, 255, 0.8);
+}
