added links to navbar

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -18,6 +18,16 @@
    background-image: url(<%= asset_path "cheers.jpeg" %>);
    background-size: cover;
  }
+
+ .home{
+   background: rgba(255, 255, 255, 0.8);
+   position:absolute;
+   top: 0;
+   bottom: 0;
+   left: 0;
+   right: 0;
+   margin:auto;
+ }
 .container{
   background: rgba(255, 255, 255, 0.8);
 }
