business ad user sign in

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,2 +1,4 @@
 <h1>Profiles#show</h1>
-<p>Find me in app/views/profiles/show.html.erb</p>
+<h3><%= @user.name %></h3>
+  <h5><%= @user.username %></h5>
+  <h5><p><%= @user.birthday %></p></h5>
