--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,6 +15,14 @@
     <%= f.label :birthday %> <br />
     <%=f.text_field :birthday, placeholder: "__/__/____" %>
   </div><br />
+  
+  <div class="field">
+    <%= f.text_field :address, placeholder: "address" %>
+  </div><br />
+  
+  <div class="field">
+    <%= f.text_field :bio, placeholder: "bio" %>
+  </div><br />
 
   <div class="field">
     <%= f.text_field :email, placeholder: "your email address" %>
@@ -39,3 +47,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+
