--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,5 +1,5 @@
 <h1>The Beer List</h1>
-<p>Put beer stuff here?</p>
+<p>Put beer stuff here...going forward</p>
 <%= @beers.name %>
 
 <!-- <#% @beers.each do |info| %> -->
