--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,8 +1,37 @@
 <h1>The Beer List</h1>
-<p>Put beer stuff here...going forward</p>
-<%= @beers.name %>
+<h3>Search for your favorite beer or type of beer:</h3>
 
 
 <!-- <#% @beers.each do |info| %> -->
 <!-- <p><#%= info %></p> -->
 <%#end%>
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <title></title>
+    </head>
+    <body>
+
+        <form method="post" action="www.websitehere.com/folderhere/"
+              name="searchform" id="searchform">
+
+            <label for="Search"> Search: </label>
+            <input type="text" id="search" name="myName" placeholder="Search for Beer"
+                   required="required" style="width: 520px" />
+
+            <label for="category" id="category">Category</label>
+            <select>
+                <option value="title" selected="selected">Beer Name</option>
+                <option value="director">Beer Type</option>
+            </select>
+            <input type="submit" value="Search" id="searchbtn">
+
+            <p></p>
+        </form>
+    </body>
+</html>
+<h4>Today's beer of choice: <%= @beers.name %> <h4>
+
+<div id="search_results">Local TapScout Results:</div>
