--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,13 +46,23 @@
 
         <ul class="nav navbar-nav navbar-right">
           <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete%></li>
+          
           <li class="dropdown">
+             <% if user_signed_in? %>
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.email %> <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><%= link_to "edit profile", edit_user_registration_path %></li>
               <li role="separator" class="divider"></li>
               <li><%= link_to "sign-out", destroy_user_session_path, method: :delete %></li>
-            </ul>
+          </ul>
+              <% else business_user_signed_in?%>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_business_user.email %> <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "edit profile", edit_business_user_registration_path %></li>
+              <li role="separator" class="divider"></li>
+              <li><%= link_to "sign-out", destroy_user_session_path, method: :delete %></li>
+              </ul>
+              <% end %>
           </li>
         </ul>
       </div><!-- /.navbar-collapse -->
@@ -64,9 +74,8 @@
 <br />
 <p align="right"><%= link_to "Business Sign Up", new_business_user_registration_path, class: "btn-lg btn-danger" %></p>
 <p align="right"><%= link_to "Business Sign In", new_business_user_session_path, class: "btn-lg btn-info" %></p>
-
-
 <%end%>
+
   <div class="container">
 <%= yield %>
   </div>
