changes to search bar

--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -13,7 +13,7 @@
         <title></title>
     </head>
     <body>
-
+<!-- #place holder -->
         <form method="post" action="www.websitehere.com/folderhere/"
               name="searchform" id="searchform">
 
