--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -4,15 +4,8 @@
 
 <!-- <#% @beers.each do |info| %> -->
 <!-- <p><#%= info %></p> -->
-<%#end%>
+<%#end%
 
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title></title>
-    </head>
-    <body>
 <!-- #place holder -->
         <form method="post" action="www.websitehere.com/folderhere/"
               name="searchform" id="searchform">
@@ -29,9 +22,6 @@
             <input type="submit" value="Search" id="searchbtn">
 
             <p></p>
-        </form>
-    </body>
-</html>
 <h4>Today's beer of choice: <%= @beers.name %> <h4>
 
 <div id="search_results">Local TapScout Results:</div>
