--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,11 +70,12 @@
   </nav>
   <% else %>
   <ul class="nav nav-pills">
-  <li role="presentation" class="active"><%= link_to "sign up", new_user_registration_path %></li>
+  <li role="presentation" class="active" data-toggle="modal" data-target="#myModal"> sign up</li>
   <li role="presentation" class="active"><%= link_to "sign in", new_user_session_path %></li>
   <li role="presentation" class="active"><%= link_to "business sign up", new_business_user_registration_path %></li>
   <li role="presentation" class="active"><%= link_to "business sign in", new_business_user_session_path %></li>
 </ul>
+<%= render 'devise/shared/userup' %>
 <%end%>
 
   <div class="container">
