--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,13 +69,27 @@
     </div><!-- /.container-fluid -->
   </nav>
   <% else %>
-  <ul class="nav nav-pills">
-  <li role="presentation" class="active" data-toggle="modal" data-target="#myModal"> sign up</li>
-  <li role="presentation" class="active"><%= link_to "sign in", new_user_session_path %></li>
-  <li role="presentation" class="active"><%= link_to "business sign up", new_business_user_registration_path %></li>
-  <li role="presentation" class="active"><%= link_to "business sign in", new_business_user_session_path %></li>
+  <ul class="nav nav-tabs">
+  <li role="presentation" class="dropdown">
+    <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+      Sign In <span class="caret"></span>
+    </a>
+    <ul class="dropdown-menu">
+      <li button type="button" class="btn btn-default btn-sm dropdown-toggle"data-toggle="modal" data-target="#aModal"> beer drinker</li>
+      <li button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="modal" data-target="#aModal"> beer seller</li>
+    </ul>
+  </li>
+  <li role="presentation" class="dropdown">
+    <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+      Sign Up <span class="caret"></span>
+    </a>
+    <ul class="dropdown-menu">
+      <li button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="modal" data-target="#myModal"> beer drinker</li>
+      <li button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="modal" data-target="#myModal"> beer seller</li>
+    </ul>
+  </li>
 </ul>
-<%= render 'devise/shared/userup' %>
+<%= render 'shared/modal' %>
 <%end%>
 
   <div class="container">
