--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -7,24 +7,7 @@
 <%#end%>
 
 
-<!-- #place holder -->
-        <form method="post" action="www.websitehere.com/folderhere/"
-              name="searchform" id="searchform">
-
-            <label for="Search"> Search: </label>
-            <input type="text" id="search" name="myName" placeholder="Search for Beer"
-                   required="required" style="width: 520px" />
-
-            <label for="category" id="category">Category</label>
-            <select>
-                <option value="title" selected="selected">Beer Name</option>
-                <option value="director">Beer Type</option>
-            </select>
-            <input type="submit" value="Search" id="searchbtn">
-
-            <p></p>
-        </form>
-    
-<h4>Today's beer of choice: <%= @beers.name %> <h4>
-
-<div id="search_results">Local TapScout Results:</div>
+<%= form_tag(search_path, method: :get) do %>
+  <%= text_field_tag(:q) %>
+  <%= submit_tag %>
+<% end %>
