--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <div class="nav">
-    <% if user_signed_in? %>
+
+  <% if user_signed_in? || business_user_signed_in?%>
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
@@ -21,21 +21,34 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to "home", root_path, class: "navbar navbar-brand" %>
+         <%= link_to "Home", root_path, class:"navbar-brand" %>
       </div>
+
       <!-- Collect the nav links, forms, and other content for toggling -->
+
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><%= link_to "local breweries", "#" %></li>
-          <li><%= link_to "find beer", "#" %></li>
+          <% if user_signed_in? %>
+          <li><%= link_to "User Profile", profile_path(id: current_user.id) %></li>
+          <% else business_user_signed_in?%>
+          <li><%= link_to "Business Profile", businessprofile_path(id: current_business_user.id) %></li>
+          <% end %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Action</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="#">Separated link</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="#">One more separated link</a></li>
+            </ul>
+          </li>
         </ul>
-        <form class="navbar-form navbar-right" role="search">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
-          </div>
-          <button type="submit" class="btn btn-default">Submit</button>
-        </form>
+
         <ul class="nav navbar-nav navbar-right">
+          <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete%></li>
           <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.email %> <span class="caret"></span></a>
             <ul class="dropdown-menu">
@@ -48,8 +61,15 @@
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
-  </div>
-  <% end %>
+  <% else %>
+<p align="right"><%= link_to "User Sign Up", new_user_registration_path, class: "btn-lg btn-danger" %></p>
+<p align="right"><%= link_to "User Sign In", new_user_session_path, class: "btn-lg btn-info" %></p>
+<br />
+<p align="right"><%= link_to "Business Sign Up", new_business_user_registration_path, class: "btn-lg btn-danger" %></p>
+<p align="right"><%= link_to "Business Sign In", new_business_user_session_path, class: "btn-lg btn-info" %></p>
+
+
+<%end%>
   <div class="container">
 <%= yield %>
   </div>
