--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,13 +1,9 @@
-<h1>The Beer List</h1>
-<h3>Search for your favorite beer or type of beer:</h3>
+<h1><center>Tap Scout</center></h1>
+<h2>Beer Search:</h2>
 
-
-<!-- <#% @beers.each do |info| %> -->
-<!-- <p><#%= info %></p> -->
-<%#end%>
 
 
 <%= form_tag(search_path, method: :get) do %>
   <%= text_field_tag(:q) %>
-  <%= submit_tag %>
+  <%= submit_tag "Search Inventory" %>
 <% end %>
