--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,20 +31,9 @@
           <% if user_signed_in? %>
           <li><%= link_to "User Profile", profile_path(id: current_user.id) %></li>
           <% else business_user_signed_in?%>
-          <li><%= link_to "Business Profile", businessprofile_path(id: current_business_user.id) %></li>
-          <% end %>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">One more separated link</a></li>
-            </ul>
-          </li>
+          <li><%= link_to "Your Business Profile", businessprofile_path(id: current_business_user.id) %></li>
+          <li><%= link_to "See All Business Profiles", businessprofiles_path %></li>
+           <% end %>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
