--- a/app/views/shared/_modal.html.erb
+++ b/app/views/shared/_modal.html.erb
@@ -10,25 +10,13 @@
           <%= devise_error_messages! %>
 
           <div class="field">
-            <%= f.text_field :name, placeholder: "First Name Last Name", autofocus: true %>
+            <%= f.text_field :name, placeholder: "Enter your name (first and last) or your business name", autofocus: true %>
           </div><br />
 
           <div class="field">
             <%= f.text_field :username, placeholder: "username" %>
           </div><br />
 
-          <div class="field">
-            <%= f.label :birthday %> <br />
-            <%=f.text_field :birthday, placeholder: "__/__/____" %>
-          </div><br />
-
-          <div class="field">
-            <%= f.text_field :address, placeholder: "address" %>
-          </div><br />
-
-          <div class="field">
-            <%= f.text_field :bio, placeholder: "bio" %>
-          </div><br />
 
           <div class="field">
             <%= f.text_field :email, placeholder: "your email address" %>
