--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -15,7 +15,7 @@
  */
 
  body{
-   background-image: url(<%= asset_path "cheers.jpeg" %>);
+   background-image: url(<%= asset_path "beer_photo.jpeg" %>);
    background-size: cover;
  }
 
