--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -28,6 +28,12 @@
    right: 0;
    margin:auto;
  }
+
+ #map-canvas {
+   width: 100%;
+   height: 500px;
+ }
+
 .container{
   background: rgba(255, 255, 255, 0.8);
 }
