--- a/app/views/drinks/drinksearch.html.erb
+++ b/app/views/drinks/drinksearch.html.erb
@@ -10,6 +10,10 @@
     <th>
       Description
     </th>
+  
+    <th>
+      Select this Beer
+    </th>
   </tr>
 </thead>
 <tbody>
@@ -23,6 +27,10 @@
   </td>
   <td>
   <%= b.description %>
+  </td>
+
+  <td>
+    <%= button_to "Select Beer", drinks_path(name: b.name, abv: b.abv, description: b.description) %>
   </td>
   </tr>
   <% end %>
