--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,8 +67,8 @@
       Sign In <span class="caret"></span>
     </a>
     <ul class="dropdown-menu">
-      li><%= link_to "user", new_user_session_path%></li>
-      li><%= link_to "business", new_business_user_session_path%></li>
+      <li><%= link_to "user", new_user_session_path%></li>
+      <li><%= link_to "business", new_business_user_session_path%></li>
     </ul>
   </li>
   <li role="presentation" class="dropdown">
@@ -76,8 +76,8 @@
       Sign Up <span class="caret"></span>
     </a>
     <ul class="dropdown-menu">
-      li><%= link_to "user", new_user_registration_path%></li>
-      li><%= link_to "business", new_business_user_registration_path%></li>
+      <li><%= link_to "user", new_user_registration_path%></li>
+      <li><%= link_to "business", new_business_user_registration_path%></li>
     </ul>
   </li>
 </ul>
