--- a/app/views/businessprofiles/show.html.erb
+++ b/app/views/businessprofiles/show.html.erb
@@ -11,5 +11,6 @@
 <%= javascript_tag do %>
   latitude = '<%= j @businessprofile.latitude.to_s %>';
   longitude = '<%= j @businessprofile.longitude.to_s %>';
+  address = '<%= j @businessprofile.address %>';
   title = '<%= j @businessprofile.name %>'
 <% end %>
