--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -10,7 +10,10 @@
   <div class="field">
     <%= f.text_field :email, placeholder: "your email address" %>
   </div><br />
-
+   
+          <div class="field">
+            <%= f.text_field :ip_address, placeholder: "IP" %>
+          </div><br />
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
