--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,6 +12,10 @@
           <div class="field">
             <%= f.text_field :email, placeholder: "your email address" %>
           </div><br />
+          
+          <div class="field">
+            <%= f.text_field :ip_address, placeholder: "IP" %>
+          </div><br />
 
           <div class="field">
             <%= f.label :password %>
