updated business profile

--- a/app/views/businessprofiles/show.html.erb
+++ b/app/views/businessprofiles/show.html.erb
@@ -14,9 +14,9 @@
 
 <%= javascript_tag do %>
 
-  latitude = '<%= j @businessprofile.latitude.to_s %>';
-  longitude = '<%= j @businessprofile.longitude.to_s %>';
-  address = '<%= j @businessprofile.address %>';
-  title = '<%= j @businessprofile.name %>'
+latitude = '<%= j @b_profile.latitude.to_s %>';
+longitude = '<%= j @b_profile.longitude.to_s %>';
+address = '<%= j @b_profile.address %>';
+title = '<%= j @b_profile.name %>'
 
 <% end %>
