--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,6 +1,18 @@
-<h1>Profiles#show</h1>
-<h3><%= @user.name %></h3>
-  <h5><%= @user.username %></h5>
-  <h5><p><%= @user.birthday %></p></h5>
-<%= @user.bio %>
-<%= @user.address %>
+<h1>Welcome to Tap Scout: <%= @user.username %></h1>
+  <h2>From here you can search beers, search local businesses, or find that special Tinder date!</h2>
+
+<p></p>
+
+<h3>Search for your favorite beer or type of beer:</h3>
+
+<%= form_tag(search_path, method: :get) do %>
+  <%= text_field_tag(:q) %>
+  <%= submit_tag "Search Inventory" %>
+<% end %>
+
+<h3>Search for business near you:</h3>
+
+<%= form_tag(businessprofile_path, method: :get) do %>
+  <%= text_field_tag(:q) %>
+  <%= submit_tag "Search Business" %>
+<% end %>
