fixed link to profile page

--- a/app/views/businessprofiles/index.html.erb
+++ b/app/views/businessprofiles/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Business Profile Feed</h1>
 
 <% @business_profiles.each do |x| %>
-<%= link_to x.name, businessprofile_path(id: 1) %><br />
+<%= link_to x.name, x %><br />
     <%= x.bio %></br>
     <% if user_signed_in? %>
     Miles from you: <%= x.distance_to(current_user) %> </br>
