--- a/app/views/businessprofiles/show.html.erb
+++ b/app/views/businessprofiles/show.html.erb
@@ -20,7 +20,7 @@
   latitude = '<%= j @b_profile.latitude.to_s %>';
  longitude = '<%= j @b_profile.longitude.to_s %>';
  address = '<%= j @b_profile.address %>';
- <%= j @b_profile.name %>
+  title = '<%= j @b_profile.name %>'
 
 
 
