--- a/app/views/businessprofiles/_form.html.erb
+++ b/app/views/businessprofiles/_form.html.erb
@@ -22,9 +22,9 @@
     <%= f.label :address %><br>
     <%= f.text_field :address %>
   </div>
-  <div class="field">
-    <%= f.label :bio %><br>
-    <%= f.text_field :bio %>
+<div class="form-group">
+   <%= f.label :bio %><br>
+  <%= f.text_area :bio, class: "form-control", :rows => 10 %>
   </div>
    <%= f.label "Atmosphere" %>
     <%= f.collection_select(:atmosphere_id, Atmosphere.all, :id, :status) %><br />
