--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,6 +65,7 @@
   </nav>
   <% else %>
 
+  <div class="nav_pills">
   <ul class="nav nav-tabs">
   <li role="presentation" class="dropdown">
     <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
@@ -87,6 +88,7 @@
 </ul>
 <%= render 'shared/modal' %>
 <%end%>
+</div>
 
   <div class="container">
 <%= yield %>
