--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,3 @@
-<h1>Landing Page for Tap Scout</h1>
-<h2> Welcome index will be landiing page (localhost:3000)</h2>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<div class="welcome">
+  <h1>Tap Scout</h1>
+</div>
