beer search business profile

--- a/app/views/drinks/new.html.erb
+++ b/app/views/drinks/new.html.erb
@@ -1,3 +1,5 @@
+<p id="notice"><%= notice %></p>
+
 <h3>Search for your favorite beer or type of beer:</h3>
 
 <%= form_tag(results_path, method: :get) do %>
@@ -12,3 +14,6 @@
 <%= dr.name %>
     <%= button_to "Select Beer", join_path(drink: dr.id, biz: current_business_user.businessprofile.id) %>
 <%end %>
+
+
+<%= link_to "Done", businessprofile_path(current_business_user.businessprofile.id) %>
