--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -15,25 +15,41 @@
  */
 
  body{
-   background-image: url(<%= asset_path "beer_photo.jpeg" %>);
+   background-image: url(<%= asset_path "taps.jpeg" %>);
    background-size: cover;
+   background-repeat: no-repeat;
  }
 
- .home{
-   background: rgba(255, 255, 255, 0.8);
-   position:absolute;
-   top: 0;
-   bottom: 0;
-   left: 0;
-   right: 0;
-   margin:auto;
+
+ .container {
+   background-color: rgba(102, 141, 60, 0.9);
+   border-color: #493829;
+   border-style: double;
+   border-width: thick;
+   margin-top: 50px;
+   margin-right: 10px;
+   margin-bottom: 10px;
+   margin-left: 10px;
+   padding-top: 20px;
+   padding-right: 10px;
+   padding-bottom: 20px;
+   padding-right: 10px;
+   padding-bottom: 40px;
  }
+  .welcome h1 {
+    text-align: center;
+    font-family: 'Bitter', sans-serif;
+    font-size: 150px;
+    color: #493829;
+  }
+
+ .nav_pills{
+   background-color: rgba(189, 208, 156, 0.9);
+ }
+
+
 
  #map-canvas {
    width: 100%;
    height: 500px;
  }
-
-.container{
-  background: rgba(255, 255, 255, 0.5);
-}
