stylings on business show page

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -18,6 +18,7 @@
    background-image: url(<%= asset_path "taps.jpeg" %>);
    background-size: cover;
    background-repeat: no-repeat;
+   font-family: 'Karla', sans-serif;
  }
 
 
