--- a/app/views/businessprofiles/_form.html.erb
+++ b/app/views/businessprofiles/_form.html.erb
@@ -10,28 +10,32 @@
       </ul>
     </div>
   <% end %>
- <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+
+<form>
+
+ <div class="form-group">
+    <%= f.text_field :name, class: "form-control", placeholder: "Business Name" %>
   </div>
-  <div class="field">
-    <%= f.label :phone_number %><br>
-    <%= f.text_field :phone_number %>
+
+  <div class="form-group">
+    <%= f.text_field :phone_number, class: "form-control", placeholder: "(  )___-____" %>
   </div>
-  <div class="field">
-    <%= f.label :address %><br>
-    <%= f.text_field :address %>
+
+  <div class="form-group">
+    <%= f.text_field :address, class: "form-control",
+    placeholder: "Number & Street Name City, State, Zip Code" %>
   </div>
+
 <div class="form-group">
    <%= f.label :bio %><br>
   <%= f.text_area :bio, class: "form-control", :rows => 10 %>
   </div>
    <%= f.label "Atmosphere" %>
     <%= f.collection_select(:atmosphere_id, Atmosphere.all, :id, :status) %><br />
-    
+
     <%= f.label "Attraction" %>
     <%= f.collection_select(:attraction_id, Attraction.all, :id, :name) %><br />
-    
+
   <div class="field">
     <%= f.label :business_user_id %><br>
     <%= f.text_field :business_user_id, value: current_business_user.id %>
@@ -39,4 +43,6 @@
   <div class="actions">
     <%= f.submit %>
   </div>
+
+</form>
 <% end %>
