--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -21,6 +21,14 @@
  }
 
 
+.nav-tabs>li>a {
+   color: white;
+}
+
+a {
+ color: white;
+}
+
  .container {
    background-color: rgba(102, 141, 60, 0.9);
    border-color: #493829;
@@ -53,3 +61,4 @@
    width: 100%;
    height: 500px;
  }
+
