--- a/app/views/businessprofiles/index.html.erb
+++ b/app/views/businessprofiles/index.html.erb
@@ -1,6 +1,41 @@
+<ul class="nav nav-tabs">
+  <li role="presentation"> <%= link_to "All", businessprofiles_path %></li>
+  <li role="presentation" class="dropdown">
+   <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+     Atmosphere <span class="caret"></span>
+   </a>
+   <ul class="dropdown-menu">
+  <% @atmospheres.each do |atmosphere| %>
+  <li><%= link_to atmosphere.status, businessprofiles_path(atmosphere_id: atmosphere.id)%></li>
+  <% end %>
+  </ul>
+  </li>
+  <li role="presentation" class="dropdown">
+  <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+    Attractions <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu">
+  <% @attractions.each do |attraction| %>
+  <li><%= link_to attraction.name, businessprofiles_path(attraction_id: attraction.id)%></li>
+  <% end %>
+</ul>
+</li>
+</ul>
+
+
+<% @businessprofile.each do |x| %>
+<%= link_to x.name, x %><br />
+
+    <%= x.bio %></br>
+    <% if user_signed_in? %>
+    Miles from you: <%= x.distance_to(current_user).round(1) %> </br>
+    <% end %>
+
+<% end %>
+
+<br />
 <%= search_form_for @q do |f| %>
 
-  # Search if the name field contains...
   <%= f.label :drinks_name_cont %>
   <%= f.search_field :drinks_name_cont %>
 
@@ -8,5 +43,5 @@
 <% end %>
 
 <% @profiles.each do |pro| %>
-<%=pro.name%>
+<%= link_to pro.name, pro %><br />
 <%end%>
