added motto attribute to businessprofiles, and styled businessprofile index page

--- a/app/views/businessprofiles/_form.html.erb
+++ b/app/views/businessprofiles/_form.html.erb
@@ -27,6 +27,10 @@
   <div class="form-group">
   <%= f.text_area :bio, class: "form-control", :rows => 10, placeholder: "Tell the world about your brewery!" %>
   </div>
+  
+  <div class="form-group">
+  <%= f.text_field :motto, class: "form-control", placeholder: "Tagline Time!" %>
+  </div>
 
   <div class="form-group">
    <%= f.label "Atmosphere" %>
