--- a/app/views/drinks/new.html.erb
+++ b/app/views/drinks/new.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <p id="notice"><%= notice %></p>
 
 <h3>Search for your favorite beer or type of beer:</h3>
@@ -17,3 +18,4 @@
 
 
 <%= link_to "Done", businessprofile_path(current_business_user.businessprofile.id) %>
+</div>
