--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -31,7 +31,7 @@ a {
 }
 
  .container {
-   background-color: rgba(102, 141, 60, 0.9);
+   background-color: rgba(102, 141, 60, 0.8);
    border-color: #493829;
    border-style: double;
    border-width: thick;
@@ -61,5 +61,101 @@ a {
  }
 
 .thumbnail{
+ background-color: black;
+}
+
+.col-md-1{
+ position:fixed; /* <-- fixes the left panel to prevent from scrolling */
+  top:50px;
+  left:0px;
+  width:230px;
+  height:100%;
+  padding: 30px;
+  background-color: rgba(102, 141, 60, 1);
+  font-size: large;
+  }
+  
+
+ .col-md-9{
+  position: relative;
+  top: 50px;
+  left:0px;
+  width: 890px;
+  height: 100%;
+  margin-left: 230px;
+  
+ }
+ 
+ .col-md-2{
+  position:fixed;
+  top: 50px;
+  left:0px;
+  width: 250px;
+  height: 100%;
+  margin-left: 1120px;
+  background-color: rgba(102, 141, 60, 1);
+  color: white;
+ 
+ }
+ 
+
+ .head{
+  position: fixed;
+  background-color: #101010;
+  width: 890px;
+  margin-left: -15px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  color: white;
+  margin-top: 50px;
+  border-color: black;
+   border-style: solid;
+   border-width: thick;
+ }
+ 
+ input {
+
+  color: black;
+ }
+ 
+ .panel-success>.panel-heading {
+  background-color: white;
+  border-color: white;
+  
+ }
+ 
+  .panel-success>.panel-heading a {
+color: black;  
+text-decoration: underline;
+font-weight: bolder; 
+
+}
+ 
+ 
+ .panel-success{
+  border-color: black;
+  margin-left: 185px;
+  margin-top: 85px;
+  width: 500px;
+  border-style: solid;
+border-width: thick;
+ }
+ 
+.search a{
+ font-weight: bolder;
+ color: black;
+}
+ 
+.search{
+ background-color: transparent;
+ width: 175px;
+ margin-bottom: -50px;
+ padding-right: 50px;
+ font-size: small;
+ color: black;
+ margin-left: -20px;
+}
+
+button{
  background-color: black;
 }
