--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,6 +1,7 @@
-
+<div class="container">
 <h3>Search Tap Scout's Beer Inventory:</h3>
 <%= form_tag(search_path, method: :get) do %>
   <%= text_field_tag(:q) %>
   <%= submit_tag "Search Inventory" %>
 <% end %>
+<div class="container">
