--- a/app/views/businessprofiles/new.html.erb
+++ b/app/views/businessprofiles/new.html.erb
@@ -1,5 +1,7 @@
+<div class="container">
 <h1>Business Information</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', businessprofile_path(id: current_business_user.id) %>
+</div>
