--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 <body>
 
   <% if user_signed_in? || business_user_signed_in?%>
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-default  navbar-fixed-top">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -84,12 +84,12 @@
     </ul>
   </li>
 </ul>
-<%= render 'shared/modal' %>
+
 <%end%>
 </div>
 
-<div class="container">
+
 <%= yield %>
-</div>
+
 </body>
 </html>
