--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -26,17 +26,15 @@
 }
 
 a {
- color: white;
+ color: black;
 }
 
  .container {
-   background-color: rgba(102, 141, 60, 0.9);
+   background-color: rgba(89, 149, 50, 0.8);
    border-color: #493829;
    border-style: double;
    border-width: thick;
    margin-top: 50px;
-   
-  
  }
   .welcome h1 {
     text-align: center;
@@ -60,5 +58,5 @@ a {
  }
 
  .thumbnail {
-   background-color:black;
+   background-color:#82BB5D;
  }
