fixed business profile edits

--- a/app/views/businessprofiles/show.html.erb
+++ b/app/views/businessprofiles/show.html.erb
@@ -1,9 +1,9 @@
 <div class = "container">
 <div class="page-header">
   <h1><%= @b_profile.name %></h1>
-
+<% if current_business_user.id == @b_profile.business_user.id %>
   <%= link_to "Edit Profile", edit_businessprofile_path %>
-
+<% end %>
 </div>
 
 <% if user_signed_in? %>
