--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -12,7 +12,8 @@
  *
  *= require_tree .
  *= require_self
- */
+*= require fullcalendar
+*/
 
  body{
    background-image: url(<%= asset_path "taps.jpeg" %>);
@@ -26,7 +27,7 @@
 }
 
 a {
- color: black;
+ color: white;
 }
 
  .container {
@@ -50,7 +51,10 @@ a {
 
  #map-canvas {
    width: 100%;
-   height: 500px;
+   height: 300px;
+   border-width: thick;
+   border-style: outset;
+   margin-bottom: 15px;
  }
 
  .cant-see-me{
@@ -59,11 +63,14 @@ a {
 
 
 .thumbnail{
- background-color: black;
+ background-color: #C19000;
+ border-width:thick;
+ border-style:ridge;
+ color: #3B372B;
 }
 
 .col-md-1{
- position:fixed; /* <-- fixes the left panel to prevent from scrolling */
+ position:fixed;
   top:50px;
   left:0px;
   width:230px;
@@ -81,7 +88,6 @@ a {
   width: 890px;
   height: 100%;
   margin-left: 230px;
-
  }
 
  .col-md-2{
@@ -93,7 +99,6 @@ a {
   margin-left: 1120px;
   background-color: rgba(102, 141, 60, 1);
   color: white;
-
  }
 
 
@@ -112,21 +117,18 @@ a {
  }
 
  input {
-
   color: black;
  }
 
  .panel-success>.panel-heading {
   background-color: white;
   border-color: white;
-
  }
 
   .panel-success>.panel-heading a {
 color: black;
 text-decoration: underline;
 font-weight: bolder;
-
 }
 
 
@@ -156,4 +158,11 @@ border-width: thick;
 
 button{
  background-color: black;
+}
+
+#calendar{
+  border-width:thick;
+  border-style: groove;
+  width: 850px;
+  margin-left: 11%;
 }
