--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -12,16 +12,14 @@
  *
  *= require_tree .
  *= require_self
- *= require fullcalendar
- */
+*= require fullcalendar
+*/
 
  body{
    background-image: url(<%= asset_path "taps.jpeg" %>);
-   background-size: cover;
    background-repeat: no-repeat;
    font-family: 'Karla', sans-serif;
  }
-
 
 .nav-tabs>li>a {
    color: white;
@@ -32,7 +30,7 @@ a {
 }
 
  .container {
-   background-color: rgba(102, 141, 60, 0.8);
+   background-color: rgba(102, 141, 60, 1);
    border-color: #493829;
    border-style: double;
    border-width: thick;
@@ -52,19 +50,26 @@ a {
 
  #map-canvas {
    width: 100%;
-   height: 500px;
+   height: 300px;
+   border-width: thick;
+   border-style: outset;
+   margin-bottom: 15px;
  }
 
  .cant-see-me{
    display: none;
  }
 
+
 .thumbnail{
- background-color: black;
+ background-color: #C19000;
+ border-width:thick;
+ border-style:ridge;
+ color: #3B372B;
 }
 
 .col-md-1{
- position:fixed; /* <-- fixes the left panel to prevent from scrolling */
+ position:fixed;
   top:50px;
   left:0px;
   width:230px;
@@ -82,7 +87,6 @@ a {
   width: 890px;
   height: 100%;
   margin-left: 230px;
-
  }
 
  .col-md-2{
@@ -94,7 +98,6 @@ a {
   margin-left: 1120px;
   background-color: rgba(102, 141, 60, 1);
   color: white;
-
  }
 
 
@@ -113,21 +116,18 @@ a {
  }
 
  input {
-
   color: black;
  }
 
  .panel-success>.panel-heading {
   background-color: white;
   border-color: white;
-
  }
 
   .panel-success>.panel-heading a {
 color: black;
 text-decoration: underline;
 font-weight: bolder;
-
 }
 
 
@@ -158,4 +158,10 @@ border-width: thick;
 button{
  background-color: black;
 }
->>>>>>> 91245499f9d7ef573d0990138c679fa2e8b7d968
+
+#calendar{
+  border-width:thick;
+  border-style: groove;
+  width: 850px;
+  margin-left: 11%;
+}
