--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -18,6 +18,7 @@
  body{
    background-image: url(<%= asset_path "taps.jpeg" %>);
    background-repeat: no-repeat;
+   background-size: cover;
    font-family: 'Karla', sans-serif;
  }
 
@@ -103,14 +104,14 @@ a {
 
  .head{
   position: fixed;
-  background-color: #101010;
+  background-color: rgba(102, 141, 60, 1);
   width: 890px;
   margin-left: -15px;
   padding-top: 5px;
   padding-bottom: 5px;
   color: white;
   margin-top: 50px;
-  border-color: black;
+  border-color: #C19000;
    border-style: solid;
    border-width: thick;
  }
@@ -120,7 +121,7 @@ a {
  }
 
  .panel-success>.panel-heading {
-  background-color: white;
+  background-color: rgba(102, 141, 60, 1);
   border-color: white;
  }
 
@@ -132,7 +133,7 @@ font-weight: bolder;
 
 
  .panel-success{
-  border-color: black;
+  border-color: #C19000;
   margin-left: 185px;
   margin-top: 85px;
   width: 500px;
