--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -61,8 +61,7 @@ a {
 .thumbnail{
  background-color: black;
 }
-<<<<<<< HEAD
-=======
+
 
 .col-md-1{
  position:fixed; /* <-- fixes the left panel to prevent from scrolling */
@@ -159,4 +158,7 @@ border-width: thick;
 button{
  background-color: black;
 }
->>>>>>> 91245499f9d7ef573d0990138c679fa2e8b7d968
+
+.bar{
+ padding-top: 10px;
+}
