--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -144,6 +144,7 @@ border-width: thick;
 .search a{
  font-weight: bolder;
  color: black;
+ background-color: rgba(102, 141, 60, 1);
 }
 
 .search{
@@ -167,3 +168,7 @@ button{
   margin-left: 11%;
 }
 
+.panel-body{
+background-color: rgba(102, 141, 60, 1);
+color: white;
+}
