white background for feed

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -17,7 +17,7 @@
 
  body{
    background-image: url(<%= asset_path "taps.jpeg" %>);
-   background-repeat: no-repeat;
+   background-repeat: repeat;
    background-size: cover;
    font-family: 'Karla', sans-serif;
  }
@@ -121,7 +121,7 @@ a {
  }
 
  .panel-success>.panel-heading {
-  background-color: rgba(102, 141, 60, 1);
+  background-color: white;
   border-color: white;
  }
 
@@ -167,3 +167,7 @@ button{
   margin-left: 11%;
 }
 
+.panel-body{
+ background-color: white;
+ color: black;
+}
