--- a/app/views/businessprofiles/show.html.erb
+++ b/app/views/businessprofiles/show.html.erb
@@ -34,9 +34,10 @@
    <div class="col-xs-6 col-md-6">
      <div class="thumbnail">
      <center><h3> What we're slinging right now:</h3></center>
-     <% @beer.each do |tap| %><br />
-     <%= tap  %>
-      <% end %>
+    <% @beer.each do |tap| %>
+    <%= tap %><br />
+    <% end %>
+   
     </div>
     </div>
       <div class="col-xs-6 col-md-6">
