--- a/app/views/drinks/drinksearch.html.erb
+++ b/app/views/drinks/drinksearch.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <table class="table table-hover">
 <thead>
   <tr>
@@ -39,3 +40,4 @@
   <% end %>
   </tbody>
 </table>
+</div>
